--- a/vercel.json
+++ b/vercel.json
@@ -1,35 +1,6 @@
 {
     "version": 2,
-    "builds": [
-      {
-        "src": "frontend/package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "frontend/dist"
-        }
-      },
-      {
-        "src": "server/index.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/server/index.js"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/frontend/$1"
-      }
-    ],
-    "env": {
-      "DB_USER": "postgres",
-      "DB_HOST": "localhost",
-      "DB_NAME": "noteDb",
-      "DB_PASSWORD": "yuwamen$18",
-      "DB_PORT": "5432",
-      "PORT": "5000"
-    }
-  }
-  
+    "builds": [{"src": "./index.js", "use" : "@vercel/node"}],
+    "routes": [{"src": "/(.*)", "dest": "/"}]
+
+}
