--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,23 @@
       {
         "src": "server/index.js",
         "use": "@vercel/node"
+      },
+      {
+        "src": "frontend/package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "frontend/build"
+        }
       }
     ],
     "routes": [
       {
+        "src": "/api/(.*)",
+        "dest": "server/index.js"
+      },
+      {
         "src": "/(.*)",
-        "dest": "/server/index.js"
+        "dest": "/frontend/build/$1"
       }
     ]
   }
